# multiagents-system

./: .gitignore  TODO.md  prek.toml  pyproject.toml
data/: doctors.json
src/: .env.template  a2a_client.py  a2a_clinic_agant.py  a2a_clinic_agent.py  a2a_pzu_agent.py  a2a_research_agent.py  agents.py  helpers.py  mcp_server.py  response.json
